[package]
name = "traiding_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "c028d63e5ba275927424397fe9d67cfebdc138ec", features = ["secrets", "tls", "json"] }
serde = "1.0"
chrono = "0.4.19"